exports[`operations/getInfo.ts`] = `/*
 * Headers Sample
 *
 * A sample API that demonstrates header parameters/responses
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, throwIfNullOrUndefined, encodeURI, RequestConversions, RequestOpts, ResponseArgs, StandardResponse } from '@principlestudios/openapi-codegen-typescript';

export type RequestParams = {
    xData: string;
};
export type RequestBodies = {
};

export type Responses = {
    /** Another Response */
    'other': {
        '': undefined;
    };
    /** Sample Response */
    200: {
        'application/json': Record<string, string>;
    };
    /** Sample Response */
    204: {
        '': undefined;
    };
};

export function getInfo(params: RequestParams): RequestOpts;
export function getInfo(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');
    throwIfNullOrUndefined(params.xData, 'X-Data');

    const headers: HttpHeaders = {
        'X-Data': params.xData, 
    };

    return {
        path: '/info',
        method: 'GET',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
            204,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.xhr.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as StandardResponse<Responses>;

export const conversion: RequestConversions<RequestParams,  | undefined, Responses> = {
    request: getInfo,
    response: responseConversion,
};

`;

exports[`operations/redirect.ts`] = `/*
 * Headers Sample
 *
 * A sample API that demonstrates header parameters/responses
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, throwIfNullOrUndefined, encodeURI, RequestConversions, RequestOpts, ResponseArgs, StandardResponse } from '@principlestudios/openapi-codegen-typescript';

export type RequestParams = {
};
export type RequestBodies = {
};

export type Responses = {
    /** Redirection Response */
    302: {
        '': undefined;
    };
};

export function redirect(params: RequestParams): RequestOpts;
export function redirect(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');

    const headers: HttpHeaders = {
    };

    return {
        path: '/redirect',
        method: 'GET',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            302,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.xhr.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as StandardResponse<Responses>;

export const conversion: RequestConversions<RequestParams,  | undefined, Responses> = {
    request: redirect,
    response: responseConversion,
};

`;

exports[`operations/index.ts`] = `/*
 * Headers Sample
 *
 * A sample API that demonstrates header parameters/responses
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { conversion as getInfo } from './getInfo';
import { conversion as redirect } from './redirect';

export default {
    getInfo,
    redirect,
} as const;
`;

